fix overflowing text

--- a/pitches/day-1/PITCHME.css
+++ b/pitches/day-1/PITCHME.css
@@ -2,6 +2,6 @@
   font-size: 0.8em;
   border-radius: 10px;
 
-  max-height: 80vh !important;
+  max-height: 60vh !important;
   overflow: hidden !important;
 }
